--- a/startup_files/index.html
+++ b/startup_files/index.html
@@ -16,22 +16,21 @@
 </head>
 
 <body>
-  <div class="h-100 d-flex justify-content-center align-items-center" style="background-image: url(' ./header.jpg') ;
-    height:100vh;">
-    <div class="container text-center">
-      <div class="row top-buffer">
-        <div class="col-12">
-          <h3 class="startup-title">THE BIGGEST STARTUP EVENT OF THE YEAR</h3>
-        </div>
-      </div>
-      <div class="row top-buffer">
-        <div class="col-12"><button type="button" class="btn btn-success btn-custom">FIND OUT MORE</button>
-        </div>
-
-      </div>
+  <div class="container d-flex justify-content-center align-items-center h-100">
+    <div class="row">
+      <header class="text-center col-12">
+        <h3 class="text-uppercase startup-title">the biggest startup event of the year</h3>
+      </header>
+      <div class="buffer col-12"></div>
+      <section class="text-center col-12">
+        <hr class="mx-auto">
+        <button type="button" class="btn btn-primary btn-custom text-uppercase">find out
+          more</button>
     </div>
-
+    </section>
   </div>
+  </div>
+
   <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
