--- a/startup_files/index.html
+++ b/startup_files/index.html
@@ -24,8 +24,10 @@
       <div class="buffer col-12"></div>
       <section class="text-center col-12">
         <hr class="mx-auto">
-        <button type="button" class="btn btn-primary btn-custom text-uppercase">find out
-          more</button>
+        <a
+          href="https://us21.list-manage.com/contact-form?u=c6e87fac0f69c3b5dd7b8b238&form_id=5ab0381f6d7de4eb06200712e7c40f6f"><button
+            type="button" class="btn btn-primary btn-custom text-uppercase">find out
+            more</button></a>
     </div>
     </section>
   </div>
